--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ECE7BF"
     tools:context=".RecyclerViewActivity">
 
+    
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSouthParkCharacters"
+        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
-        android:id="@+id/tvRecyclerViewTitle"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView"
+        android:background="#000"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/recyclerview"
-        android:textSize="42sp"
         android:layout_gravity="top|center"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textColor="#5465C6"
-        tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="38dp" />
+        android:text="RecyclerView"
+        android:textColor="#E64A19"
+        android:textSize="35sp" />
 
-    <Button
-        android:id="@+id/btnGoBackRV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:text="@string/go_back" />
+
 </FrameLayout>
